Closed
Bug 1337983
Opened 9 years ago
Closed 9 years ago
Intermittent accessible/tests/browser/e10s/browser_treeupdate_visibility.js | application crashed [@ mozilla::a11y::DocAccessibleParent::SetCOMProxy(RefPtr<IAccessible> const &)]
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: intermittent-bug-filer, Assigned: tbsaunde)
References
Details
(Keywords: intermittent-failure, Whiteboard: aes+)
Attachments
(1 file)
|
1.13 KB,
patch
|
bugzilla
:
review+
|
Details | Diff | Splinter Review |
Filed by: wkocher [at] mozilla.com
https://treeherder.mozilla.org/logviewer.html#?job_id=75682098&repo=mozilla-inbound
https://archive.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-win64-debug/1486588405/mozilla-inbound_win8_64-debug_test-mochitest-e10s-browser-chrome-5-bm119-tests1-windows-build27.txt.gz
| Assignee | ||
Comment 1•9 years ago
|
||
So it looks like Manager() is returning null while within RecvPDocAccessibleConstructor. That doesn't seem right, is there some odd case it can happen?
Flags: needinfo?(wmccloskey)
Flags: needinfo?(bugs)
It looks to me like GetOwnerElement() is returning null from OuterDocOfRemoteBrowser(). I think that can happen while the <browser> is being constructed. I'm guessing this happens on the window.open path while we're processing a nested event loop. Fixing this so that GetOwnerElement() never returns null would be pretty tricky I think.
If you can deal with GetOwnerElement() returning null in a way that makes sense, that would be the easiest fix. Otherwise, you could try to avoid sending the PDocAccessible constructor until window.open() has finished.
Flags: needinfo?(wmccloskey)
Updated•9 years ago
|
Flags: needinfo?(bugs)
| Assignee | ||
Comment 3•9 years ago
|
||
(In reply to Bill McCloskey (:billm) from comment #2)
> It looks to me like GetOwnerElement() is returning null from
> OuterDocOfRemoteBrowser(). I think that can happen while the <browser> is
> being constructed. I'm guessing this happens on the window.open path while
> we're processing a nested event loop. Fixing this so that GetOwnerElement()
> never returns null would be pretty tricky I think.
err, I should have noticed the message was different, I was kind of in a hurry and just matched line numbers. That said we don't see the NS_ASSERTION() about frame in OuterDocOfRemoteBrowser() so I would suspect the browser element doesn't yet have an accessible. Which seems possible.
> If you can deal with GetOwnerElement() returning null in a way that makes
> sense, that would be the easiest fix. Otherwise, you could try to avoid
> sending the PDocAccessible constructor until window.open() has finished.
hmm, I'm not sure how hard it would be to deal with not having a accessible for the browser element at this point. Its probably easier than blocking PDocAccessibleConstructor though. We'd need to figure out somethingelse for the com proxy stuff, but that's the only thing that needs it.
Updated•9 years ago
|
Whiteboard: aes+
| Assignee | ||
Comment 4•9 years ago
|
||
the outer doc of a top level content document does not necessarily exist when
we recieve the PDocAccessibleConstructor message for it. So we shouldn't asser
there is an outer doc here.
We need to fix this more, but for now lets just remove the assert because its pretty clearly bogus.
Attachment #8836201 -
Flags: review?(aklotz)
Updated•9 years ago
|
Attachment #8836201 -
Flags: review?(aklotz) → review+
Pushed by tsaunders@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b2b78a5b4015
remove incorrect assert r=aklotz
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
| Comment hidden (Intermittent Failures Robot) |
Comment 8•9 years ago
|
||
Looks like this assertion goes back to Fx52. Does this need to be backported?
Assignee: nobody → tbsaunde+mozbugs
status-firefox52:
--- → affected
status-firefox53:
--- → affected
Flags: needinfo?(tbsaunde+mozbugs)
Updated•9 years ago
|
Flags: needinfo?(tbsaunde+mozbugs)
You need to log in
before you can comment on or make changes to this bug.
Description
•