bug 1337983 - remove incorrect assert r=aklotz

the outer doc of a top level content document does not necessarily exist when
we recieve the PDocAccessibleConstructor message for it.  So we shouldn't asser
there is an outer doc here.